<resources>
    <string name="app_name">II LO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news_details">NewsDetails</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_fullscreen_image">Podgląd</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Powiadomienia</string>

    <string name="pref_title_new_message_notifications">Powiadomienia o nowych wpisach</string>

    <string name="pref_title_ringtone">Dzwonek powiadomienia</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Wibracje</string>
    <string name="ii_liceum_og_lnokszta_c_ce">II Liceum Ogólnokształcące</string>
    <string name="obrazek_wyr_niaj_cy">Obrazek wyróżniający</string>
    <string name="strona_internetowa">Strona internetowa</string>
    <string name="u00a9_2019_kacper_zakrzewski">© 2023 Kacper Zakrzewski Kacper Sokół Jan Wasilewski</string>
    <string name="powi_kszony_obrazek_wyr_niaj_cy">Powiększony obrazek wyróżniający</string>
    <string name="privacy_policy">Polityka prywatności</string>
    <string name="strona_g_wna">Strona główna</string>
    <string name="idziennik">iDziennik</string>
    <string name="plan_lekcji">Plan lekcji</string>
    <string name="odjazdy_mpk">Odjazdy MPK</string>
    <string name="feedback">Opinia</string>
    <string name="promocja_szko_y">Promocja szkoły</string>
    <string name="inne">Inne</string>
    <string name="facebook">Facebook</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="idzienniklogin1">Zaloguj się do iDziennika.</string>
    <string name="login">Login</string>
    <string name="has_o">Hasło</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="zapami_taj_mnie">Zapamiętaj mnie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="feedback_send_button">Wyślij opinię</string>
</resources>
