<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="12dp"

            android:id="@+id/editLogin"
            android:hint="@string/login" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editLogin" android:hint="@string/has_o"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/idzienniklogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/zaloguj_si"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="#ffffff"
            android:id="@+id/loginButton1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
    <LinearLayout
            android:layout_width="200dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" android:layout_marginTop="12dp"
            android:id="@+id/linearLayout" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reminder"/>
        <TextView
                android:layout_width="wrap_content"
                android:text="@string/zapami_taj_mnie"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>